--- a/src/app/guest/guest.component.html
+++ b/src/app/guest/guest.component.html
@@ -129,7 +129,7 @@
   <tbody>
     <tr *ngFor = "let guest of guests | filter:searchText" >
       <td data-label="Status" > <mat-icon [ngStyle]="{'color': guest.IsActive? '#143E18' : '#6B1111'}">stars</mat-icon></td>
-        `<td data-label="Name" > <span>{{ guest.Name }}</span></td>
+      <td data-label="Name" > <span>{{ guest.Name }}</span></td>
       <td data-label="Phone Number" ><span>{{ guest.PhoneNo }}</span></td>
       <td data-label="Date of Birth" ><span>{{ guest.DateOfBirth }}</span></td>
       <td data-label="ID Number" ><span>{{ guest.IdNo }}</span></td>
