--- a/src/app/guest/guest.component.css
+++ b/src/app/guest/guest.component.css
@@ -71,7 +71,41 @@
   }
 }
 
+.paginator{
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+  margin-right: 0;
+  margin-left:auto;
+  float:right;
+}
 
-.error{
-  color: red;
+.paginator /deep/ .ngx-pagination .current {
+  background: rgb(255, 100, 0);
+  border-radius: 4px;
+  padding-left: 9px;
+  padding-right: 9px;
+}
+.searchBox{
+  border: none;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+mat-toolbar mat-icon{
+  background-color: #000; 
+  color:#fff;
+}
+
+.modal-header button{
+  margin-right: 0;
+  margin-left:auto;
+}
+.card{
+  border: none;  
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2); 
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.modal-footer button{
+  background-color: #B21313; 
+  color: #fff;
 }
