--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,46 +1,45 @@
 <!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #041A32;" >
-    <div class="container-fluid" style="background-color: #041A32; ">
+<nav class="navbar navbar-expand-lg navbar-light bg-light firstNavBar" >
+    <div class="container-fluid">
         <div class= "header">
             <h1 class= "header">Prism System </h1>
         </div>
         
-        <button class="navbar-toggler" type="button" style="box-shadow: none;" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div style="background-color: #041A32;" class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/reservation" style="color: #fff;">Reservation</a>
+                    <a class="nav-link deactive" routerLink="/reservation">Reservation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/guest" style="color: #fff;">Guest</a>
+                    <a class="nav-link deactive" routerLink="/guest">Guest</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/room" style="color: #FF6400;">Room</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/room">Room</a>
                 </li>
             </ul>
-            <img src="assets/img/f.jpg" alt="Avatar" style="border-radius: 50%;  width: 35px; height: 35px; margin-left: 60px;">
+            <img src="assets/img/f.jpg" alt="Avatar" >
         </div>      
     </div>
 </nav>
 
 
 <!-- Nav Bar2 -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #F8F8F8; height: 60px; box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);" >
-    <div class="container-fluid" style="background-color: #F8F8F8; height: 60px;">
-        <div class="bar" style="width: 50%;">
+<nav class="navbar navbar-expand-lg secondNavBar">
+    <div class="container-fluid">
+        <div class="bar">
             <img class="img" src="assets/img/room.jpg">
-            <h2 class ="pagename" style = "padding-left: 3rem !important;" ><b>Room Type </b></h2>
+            <h2 class ="pagename" ><b>Room Type </b></h2>
         </div>
 
-        <div style="width: 250px;" class="input-group rounded">
-                <input type="search" style="border: none;  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);" class="form-control rounded" placeholder="Search" aria-label="Search"
-                  aria-describedby="search-addon" />
-                <span style="background-color: #041A32; box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2); color: #fff;" class="shadow-sm p-3 mb-5 bg-white rounded" class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
+        <div class="input-group rounded search">
+            <input type="search" class="form-control searchBox" placeholder="Search" />
+            <span id="searchIcon" class="input-group-text border-0">
+                <i class="fas fa-search"></i>
+            </span>
         </div>
     </div>
 </nav>
