--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,51 @@
-
+.firstNavBar{
+  background-color: #041A32;
+}
+.firstNavBar .container-fluid , #navbarNav{
+  background-color: #041A32;
+}
+.firstNavBar img{
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  margin-left: 60px;
+}
+.firstNavBar .navbar-toggler{
+  box-shadow: none;
+}
+#navbarNav .deactive{
+  color: #fff;
+}
+#navbarNav .active{
+  color: #FF6400;
+}
+.secondNavBar{
+  background-color: #F8F8F8;
+  height: 60px; 
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.secondNavBar .container-fluid{
+  background-color: #F8F8F8; 
+  height: 60px;
+}
+.secondNavBar .bar{
+  width: 50%;
+}
+.secondNavBar .bar h2{
+  padding-left: 3rem !important;
+}
+.search{
+  width: 250px;
+}
+.search .searchBox{
+  border: none;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.search #searchIcon{
+  background-color: #041A32; 
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2); 
+  color: #fff;
+}
 .img{
     width: 30px;
     height: 30px;
@@ -15,58 +62,57 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
-
 /* search box responsive*/
 @media(max-width: 540px){
-    .pagename{
-      display: none;
-    }
-    .input-group{
-      position: relative;
-      margin-left: auto;
-      vertical-align: middle;
-    }
+  .pagename{
+    display: none;
   }
-  
-  
-    /* table responsive*/
-  
-    @media(max-width: 750px){
-      .table thead{
-        display: none;
-      }
-  
-      .table, .table tbody, .table tr, .table td{
-        display: block;
-        width: 100%;
-      }
-      .table tr {
-        margin-bottom: 15px;
-      }
-      .table td{
-        text-align: right;
-        padding-left: 50%;
-        position: relative;
-      }
-      .table td::before{
-        content: attr(data-label);
-        position: absolute;
-        left: 0;
-        width: 50%;
-        padding-left: 2;
-        font-size: 15px;
-        font-weight: bold;
-        text-align: left;
-      }
-  
-    }
+  .input-group{
+    position: relative;
+    margin-left: auto;
+    vertical-align: middle;
+  }
+}
 
-    
+/* table responsive*/  
+@media(max-width: 750px){
+  .table thead{
+    display: none;
+  }
 
-    .modal{
-      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
-      border-radius: 0;
-    }
+  .table, .table tbody, .table tr, .table td{
+    display: block;
+    width: 100%;
+  }
+  .table tr {
+    margin-bottom: 15px;
+  }
+  .table td{
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+  }
+  .table td::before{
+    content: attr(data-label);
+    position: absolute;
+    left: 0;
+    width: 50%;
+    padding-left: 2;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: left;
+  }
 
-   
+}
+
+.modal{
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+}
+  
+.error{
+  color: red;
+}
+
+
   
