--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -18,7 +18,7 @@
                     <a class="nav-link deactive" routerLink="/guest" >Guest</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link deactive" aria-current="page" routerLink="/room">Room</a>
+                    <a class="nav-link deactive" aria-current="page" routerLink="/roomtype">Room</a>
                 </li>
             </ul>
             <img src="assets/img/f.jpg" alt="Avatar" >
