--- a/src/app/guest/guest.component.css
+++ b/src/app/guest/guest.component.css
@@ -1,59 +1,46 @@
 .nav-link {
-    padding-right: 3rem !important;
-    font-weight: bold;
-  }
-  a:hover {
-    background-color: #07325f;
-  }
-
-  button{
-      background-color: white;
-      color: black;
-      border: none;
-      box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
-      border-radius: 0%;
-  }
-  
-  .example-spacer {
-    padding-left: 3rem !important;
-  }
-
-  bar{
-    display: table-cell;
-    vertical-align: middle;
-  }
-  button:hover {
-    background-color: #07325f;
-  }
-  #btn{
-    color: #fff;
-    background-color: #FF6400;
-    box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.2);
-  }
-  #btn:hover {
-    background-color: #07325f;
-  }
-
-  .form-control me-2{
-    width: 10%;
-  }
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-  .header{
-    font-family: Sarpanch;
-    text-align: left;
-    color: rgb(255, 100, 0);
-    font-size: larger;
-    width: 65%;
-    display: table-cell;
-    vertical-align: middle;
-    background-color: #041A32;
+  padding-right: 3rem !important;
+  font-weight: bold;
+}
+a:hover {
+  background-color: #07325f;
+}
+button{
+  background-color: white;
+  color: black;
+  border: none;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0%;
+}
+.example-spacer {
+  padding-left: 3rem !important;
+}
+.bar{
+  display: table-cell;
+  vertical-align: middle;
+}
+button:hover {
+  background-color: #07325f;
+}
+.form-control me-2{
+  width: 10%;
+}
+.example-spacer {
+  flex: 1 1 auto;
+}
+.header{
+  font-family: Sarpanch;
+  text-align: left;
+  color: rgb(255, 100, 0);
+  font-size: larger;
+  width: 65%;
+  display: table-cell;
+  vertical-align: middle;
+  background-color: #041A32;
 }
 #staticBackdropLabel{
   text-align: center;
 }
-
 .form-row{
   display: inline-block;
   width: 222px;
@@ -70,7 +57,6 @@
     margin-left: 0px;
   }
 }
-
 .paginator{
   font-family: 'Lato', sans-serif;
   font-size: 15px;
@@ -78,7 +64,6 @@
   margin-left:auto;
   float:right;
 }
-
 .paginator /deep/ .ngx-pagination .current {
   background: rgb(255, 100, 0);
   border-radius: 4px;
@@ -93,19 +78,16 @@ mat-toolbar mat-icon{
   background-color: #000; 
   color:#fff;
 }
-
-.modal-header button{
-  margin-right: 0;
-  margin-left:auto;
-}
 .card{
   border: none;  
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2); 
   margin-left: 20px;
   margin-right: 20px;
 }
-
 .modal-footer button{
   background-color: #B21313; 
   color: #fff;
+}
+p mat-toolbar{
+  background-color: #fff;
 }
