--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
                     <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                 </div>
                     <br>
-                    <button type="submit" class="btn btn-primary" class="submit" routerLink="/roomtype">Login</button>
+                    <button type="submit" class="btn btn-primary" class="submit" (click)="login()" routerLink="/roomtype">Login</button>
                     <br><br>
             </form>
         </div>
