--- a/src/app/roomtype/room/room.component.html
+++ b/src/app/roomtype/room/room.component.html
@@ -1,13 +1,13 @@
 <p>
   <mat-toolbar>
-    <h3><b>Rooms Overview</b></h3>
+    <h4><b>Rooms Overview</b></h4>
   <span class="example-spacer"></span>
-      <mat-icon (click)="open(content3)" (click)="clearModalData()" >add</mat-icon>
+      <mat-icon (click)="open(addRoomModal)" (click)="clearModalData()" >add</mat-icon>
   </mat-toolbar>
 </p>
       
 <!-- Modal -->      
-<ng-template #content3 let-modal >
+<ng-template #addRoomModal let-modal >
   <div class="modal-body">
     <h2 class="text-center" ><b>Room Details</b></h2>
     
@@ -70,85 +70,86 @@
       </thead>
       <tbody>
         <tr *ngFor = "let room of rooms | filter:search">
-        <ng-container *ngIf="room.RoomTypeId == data ">
-          <td data-label="Status" > <mat-icon [ngStyle]="{'color': room.IsActive? '#143E18' : '#6B1111'}">stars</mat-icon></td>
-          <td data-label="Room No" > <span>{{ room.RoomNo }}</span></td>
-          <td data-label="Price" ><span>{{ room.Price }}</span></td>
-          <td data-label="Room Status"><span>{{ room.RoomStatus}}</span></td>
-          <td data-label="Room Type Id"><span>{{ room.RoomTypeId}}</span></td>
-          <td data-label="Action"><span>
-            <mat-icon (click)="open(content1)" style="color: #000;">edit</mat-icon>
+          <ng-container *ngIf="room.RoomTypeId == data ">
+            <td data-label="Status" > <mat-icon [ngStyle]="{'color': room.IsActive? '#143E18' : '#6B1111'}">lens</mat-icon></td>
+            <td data-label="Room No" > <span>{{ room.RoomNo }}</span></td>
+            <td data-label="Price" ><span>{{ room.Price }}</span></td>
+            <td data-label="Room Status"><span>{{ room.RoomStatus}}</span></td>
+            <td data-label="Room Type Id"><span>{{ room.RoomTypeId}}</span></td>
+            <td data-label="Action"><span>
+              <mat-icon (click)="open(updateRoomModal)" style="color: #000;">edit</mat-icon>
 
-            <!--Edit Modal -->
-            <ng-template #content1 let-modal >
-              <div class="modal-body">
-                <h2 class="text-center" ><b>Room Details</b></h2>
-                <form [formGroup]="Roomform">
-                  <div class="form-group mb-3">
-                    <label>Room Number:</label>
-                    <input type="text" class="form-control" [(ngModel)]="room.RoomNo" formControlName="RoomNo">
-                    <span class="error" *ngIf="validation.RoomNo.invalid && validation.RoomNo.touched" >
-                      <small>  Room Number is required!</small>
-                    </span>
-                  </div>
-                  <div class="form-group mb-3">
-                    <label >Price :</label>
-                    <input type="text" class="form-control" [(ngModel)]="room.Price" formControlName="Price">
-                    <span class="error" *ngIf="validation.Price.invalid && validation.Price.touched" >
-                      <small>Price is required!</small> 
-                    </span>
-                  </div>
-                  <div class="form-group mb-3">
-                    <label>Room Status :</label>
-                    <input type="text" class="form-control" [(ngModel)]="room.RoomStatus" formControlName="RoomStatus" >
-                    <span class="error" *ngIf="validation.RoomStatus.invalid && validation.RoomStatus.touched" >
-                      <small>Room Status is required!</small>
-                    </span>
-                  </div> 
-                  <div class="form-group mb-3">
-                    <label>Room Type Number :</label>
-                    <input type="text" class="form-control" [(ngModel)]="room.RoomTypeId" formControlName="RoomTypeId" >
-                    <span class="error" *ngIf="validation.RoomTypeId.invalid && validation.RoomTypeId.touched" >
-                      <small>Room Type Number is required!</small>
-                    </span>
-                  </div> 
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" [(ngModel)]="room.IsActive" formControlName="IsActive">
-                    <label class="form-check-label" for="gridCheck">
-                      Is active?
-                    </label>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button  id="Cancel" type="button" (click)="modal.close('Save click')">Cancel</button>     
-                <button id="btn" type="button" [disabled]="Roomform.invalid" (click)="UpdateRoom(room.id)" (click)="modal.close('Save click')">Save</button>
-              </div>
-            </ng-template>
+              <!--Edit Modal -->
+              <ng-template #updateRoomModal let-modal >
+                <div class="modal-body">
+                  <h2 class="text-center" ><b>Room Details</b></h2>
+                  <form [formGroup]="Roomform">
+                    <div class="form-group mb-3">
+                      <label>Room Number:</label>
+                      <input type="text" class="form-control" [(ngModel)]="room.RoomNo" formControlName="RoomNo">
+                      <span class="error" *ngIf="validation.RoomNo.invalid && validation.RoomNo.touched" >
+                        <small>  Room Number is required!</small>
+                      </span>
+                    </div>
+                    <div class="form-group mb-3">
+                      <label >Price :</label>
+                      <input type="text" class="form-control" [(ngModel)]="room.Price" formControlName="Price">
+                      <span class="error" *ngIf="validation.Price.invalid && validation.Price.touched" >
+                        <small>Price is required!</small> 
+                      </span>
+                    </div>
+                    <div class="form-group mb-3">
+                      <label>Room Status :</label>
+                      <input type="text" class="form-control" [(ngModel)]="room.RoomStatus" formControlName="RoomStatus" >
+                      <span class="error" *ngIf="validation.RoomStatus.invalid && validation.RoomStatus.touched" >
+                        <small>Room Status is required!</small>
+                      </span>
+                    </div> 
+                    <div class="form-group mb-3">
+                      <label>Room Type Number :</label>
+                      <input type="text" class="form-control" [(ngModel)]="room.RoomTypeId" formControlName="RoomTypeId" >
+                      <span class="error" *ngIf="validation.RoomTypeId.invalid && validation.RoomTypeId.touched" >
+                        <small>Room Type Number is required!</small>
+                      </span>
+                    </div> 
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" [(ngModel)]="room.IsActive" formControlName="IsActive">
+                      <label class="form-check-label" for="gridCheck">
+                        Is active?
+                      </label>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button  id="Cancel" type="button" (click)="cancel()"  (click)="modal.close('Save click')">Cancel</button>     
+                  <button id="btn" type="button" [disabled]="Roomform.invalid" (click)="UpdateRoom(room.id)" (click)="modal.close('Save click')">Save</button>
+                </div>
+              </ng-template>
 
-            <mat-icon  (click)="open(content2)"  style="color:#B21313; margin-left: 15px;">delete</mat-icon>
-        
-            <!--Delete msg Modal -->
-            <ng-template #content2 let-modal>
-              <div class="modal-header">
-                <h2 class="modal-title" id="staticBackdropLabel" style="color: #B21313;"><b>Confirmation</b></h2>
+              <mat-icon  (click)="open(deleteRoomModal)"  style="color:#B21313; margin-left: 15px;">delete</mat-icon>
+          
+              <!--Delete msg Modal -->
+              <ng-template #deleteRoomModal let-modal>
+                <div class="modal-header">
+                  <h2 class="modal-title" id="staticBackdropLabel" style="color: #B21313;"><b>Confirmation</b></h2>
                   <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                Are you sure to delete this Room ?
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="deletebtn btn btn-outline-dark" (click)="deleteRow(room.id)" (click)="modal.close('Delete click')">Delete</button>
-              </div>
-            </ng-template>
-      </span>
-      </td>
-    </ng-container>
-    </tr> 
-    </tbody>
-  </table>
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Are you sure to delete this Room ?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="deletebtn btn btn-outline-dark" (click)="deleteRow(room.id)" (click)="modal.close('Delete click')">Delete</button>
+                </div>
+              </ng-template>
+            </span>
+            </td>
+          </ng-container>
+        </tr> 
+        <br>
+      </tbody>
+    </table>
   <br>
-</div>
+  </div>
 </div>
