--- a/src/app/roomtype/roomtype.component.css
+++ b/src/app/roomtype/roomtype.component.css
@@ -133,5 +133,15 @@ p mat-toolbar {
 #icon {
   right: 2px;
   position: absolute;
-
+}
+form input {
+  border-radius: 0;
+  outline: none;
+  border: 0;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+  color: #6C6969;
+  font-size: 14px;
+}
+textarea:focus, input:focus {
+  outline: none;
 }
