--- a/src/app/guest/guest.component.css
+++ b/src/app/guest/guest.component.css
@@ -93,3 +93,14 @@ mat-toolbar mat-icon {
 .mat-toolbar {
   background-color: #fff;
 }
+form input {
+  border-radius: 0;
+  outline: none;
+  border: 0;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+  color: #6C6969;
+  font-size: 14px;
+}
+textarea:focus, input:focus {
+  outline: none;
+}
