--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,27 +1,40 @@
-.submit{
+.submit {
     background-color: rgb(4, 26, 50);
     color: rgb(255, 255, 255);
     width: 100%;
     border: none;
     height: 35px;
 }
-.header1{
+.header1 {
     font-family: Sarpanch;
     text-align: center;
     color: rgb(255, 100, 0);
     -webkit-text-stroke: 1px #041A32;
     font-size: 35px;
 }
-.login{
+.login {
     display: flex;
     flex-direction: column;
     height: 100vh;
     background-attachment: fixed;
     background-color: #F8F8F8;
 }
-#card{
+#card {
     width: 23rem; 
     margin-top: 60px; 
     margin-left: auto;
     margin-right: auto;
+}
+form input {
+    border-radius: 0;
+    outline: none;
+    border: 0;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+}
+textarea:focus, input:focus {
+    outline: none;
+}
+.input {
+    height: 40px;
+    margin-bottom: 20px;
 }
