--- a/src/app/reservation/new-reservation/new-reservation.component.html
+++ b/src/app/reservation/new-reservation/new-reservation.component.html
@@ -35,8 +35,112 @@
         </div>
 
         <div class="input-group rounded search">
-            <button class="btn reservationListBtn" routerLink="/reservation" > Reservation List </button>
-            
+            <button class="btn reservationListBtn" routerLink="/reservation" > Reservation List </button>    
         </div>
     </div>
 </nav>
+<br>
+<div class="card reservationNoCard">
+    <form class="reservationNo" [formGroup]="Reservationform">
+        Reservation No :
+        <input type="text" class="form-control" [readonly]="true" [(ngModel)]="newReservationNo" formControlName="ReservationNo" >
+    </form>
+</div>
+<br>
+<div class="container-fluid">
+    <div class="row" >
+        <div class="col-md-6 no-float" id="leftCol">
+            <div class="card card1" >
+                <h3><b>Guest Details</b></h3>
+                <form [formGroup]="Reservationform">
+                    <div class="form-group mb-3">
+                        <label>Guest Name :</label>
+                        <input type="text" class="form-control" [matAutocomplete]="auto" formControlName="GuestId">
+                        <mat-autocomplete autoActiveFirstOption  #auto="matAutocomplete" [displayWith]="displayGuestName.bind(this)">
+                            <mat-option  *ngFor="let guest of guests" [value]="guest.id">
+                                {{guest.Name}}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <span class="error" *ngIf="validation.GuestId.invalid && validation.GuestId.touched" >
+                            <small>  Guest Name is required!</small>
+                        </span>
+                    </div>
+                    <div class="form-group mb-3 form-row leftcol">
+                      <label>Adults :</label>
+                      <input type="text" class="form-control" formControlName="Adults">
+                    </div>
+                    <div class="form-group mb-3 form-row middlecol">
+                      <label>child :</label>
+                      <input type="text " class="form-control" formControlName="child">
+                    </div>
+                    <div class="form-group mb-3 form-row rightcol">
+                      <label> Number of night :</label>
+                      <input type="text" class="form-control" formControlName="NumNight">
+                    </div>
+                    <div class="form-group mb-3 " >
+                      <label>Note :</label>
+                      <textarea type="email" class="form-control" id="inputEmail" formControlName="Notes"></textarea>
+                    </div>
+                    <br>
+                </form> 
+            </div>
+        </div>
+        <div class="col-md-6 no-float" id="rightCol">
+            <div class="card card2" >
+                <h3><b>Stay Details</b></h3>
+                <form [formGroup]="Reservationform">
+                    <div class="form-group mb-3 form-row Left">
+                        <label>Room No :</label>
+                        <input type="text" class="form-control" [matAutocomplete]="autoRoomNo" formControlName="RoomId">
+                        <mat-autocomplete  #autoRoomNo="matAutocomplete" [displayWith]="displayRoomNo.bind(this)">
+                            <mat-option *ngFor="let room of rooms" [value]="room.id">
+                                {{room.RoomNo}}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <span class="error" *ngIf="validation.RoomId.invalid && validation.RoomId.touched" >
+                            <small>Room Id is required!</small> 
+                        </span>
+                    </div>
+                    <div class="form-group mb-3 form-row middle">
+                        <label>Status :</label>
+                        <select type="text" class="form-control" formControlName="Status" >
+                        <option value="Confirmed">Confirmed</option>
+                        <option value="Checked In">Checked In</option>
+                        </select>
+                        <span class="error" *ngIf="validation.Status.invalid && validation.Status.touched" >
+                            <small>Status is required!</small> 
+                        </span>
+                    </div>
+                    <div class="form-group mb-3 form-row Left">
+                        <label>Arrival Date :</label>
+                        <input type="date" class="form-control" formControlName="ArrivalDate" >
+                        <span class="error" *ngIf="validation.ArrivalDate.invalid && validation.ArrivalDate.touched" >
+                            <small>Arrival Date is required!</small>
+                        </span>
+                    </div>
+                    <div class="form-group mb-3 form-row middle">
+                        <label>Arrival Time :</label>
+                        <input type="time" class="form-control" formControlName="ArrivalTime">
+                    </div>
+                    <div class="form-group mb-3 form-row Left lastRow">
+                        <label>Departure Date :</label>
+                        <input type="date" class="form-control" formControlName="DepartureDate">
+                        <span class="error" *ngIf="validation.DepartureDate.invalid && validation.DepartureDate.touched" >
+                            <small>Departure Date is required!</small> 
+                        </span>
+                    </div>
+                    <div class="form-group mb-3 form-row middle lastRow">
+                        <label>Departure Time :</label>
+                        <input type="time" class="form-control" formControlName="DepartureTime" >
+                    </div>
+                    <br><br>
+                </form>
+            </div>            
+        </div>
+    </div>
+    <mat-toolbar>
+        <span class="example-spacer"></span>
+        <button id="Cancel" type="button" class="btn button btn-outline-dark" (click)="cancel()" (click)="ngOnInit()" >Cancel</button>
+        <button id="btn" type="button" class="btn button btn-outline-dark" [disabled]="Reservationform.invalid" routerLink="/reservation" (click)="submitForm()" (click)="cancel()">Save</button>  
+    </mat-toolbar>
+</div>
