--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -45,118 +45,157 @@
 
 <mat-toolbar class="mat-toolbar">
   <span class="example-spacer"></span>
-  <mat-icon routerLink="/newreservation" >add</mat-icon>
+  <mat-icon [routerLink]="['/newreservation']">add</mat-icon>
 </mat-toolbar>
   
-<div class="card" >
+<div class="card">
     <div class="card-body">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Reservation No</th>
-        <th scope="col">Guest Name</th>
-        <th scope="col">Room Id</th>
-        <th scope="col">Arrival Date</th>
-        <th scope="col">Departure Date</th>
-        <th scope="col">Notes</th>
-        <th scope="col">Action</th>
-      </tr>
-    </thead>
-    
-    <tbody>
-      <tr *ngFor = "let reservation of reservations | filter:searchText | paginate: {itemsPerPage : 5, currentPage:page};" >
-        <td data-label="Reservation No" > <span>{{ reservation.ReservationNo }}</span></td>
-        <td data-label="Guest Name" > <span>{{ reservation.GuestId }}</span></td>
-        <td data-label="Room Id" ><span>{{ reservation.RoomId }}</span></td>
-        <td data-label="Arrival Date" ><span>{{ reservation.ArrivalDate | date: 'dd/MMM/yy'}}</span></td>
-        <td data-label="Departure Date" ><span>{{ reservation.DepartureDate | date: 'dd/MMM/yy' }}</span></td>
-        <td data-label="Notes" ><span>{{ reservation.Notes }}</span></td>
-        <td data-label="Action" ><span>
-        <mat-icon class="checkIn" matTooltip="Check In" (click)="getId(reservation.id)" [ngClass]="{'click': reservation.id == reservationID}" >input</mat-icon>
-        <mat-icon class="checkOut"matTooltip="Check Out">check_circle_outline</mat-icon>
-        <mat-icon (click)="open(content1)" class="editIcon">edit</mat-icon>
-  
-        <!--Edit Modal -->
-        <ng-template #content1 let-modal>
-        <div class="modal-header">
-            <button  (click)="cancel()" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            <h1 class="modal-title" id="staticBackdropLabel"><b>Reservation Details</b></h1>
-            <form [formGroup]="Reservationform">
-            <div class="form-group mb-3">
-                <label>Reservation No :</label>
-                <input type="text" required  [(ngModel)]="reservation.ReservationNo" class="form-control" formControlName="ReservationNo">
-                
-            </div>
-            <div class="form-group mb-3">
-                <label>Guest Name :</label>
-                <input type="text" required  [(ngModel)]="reservation.GuestId" class="form-control" formControlName="GuestId">
-                <span class="error" *ngIf="validation.GuestId.invalid && validation.GuestId.touched" >
-                <small>  Guest Id is required!</small>
-                </span>
-            </div>
-            <div class="form-group mb-3 form-row">
-                <label>Room Id :</label>
-                <input type="text" [(ngModel)]="reservation.RoomId" class="form-control" formControlName="RoomId">
-                <span class="error" *ngIf="validation.RoomId.invalid && validation.RoomId.touched" >
-                <small>Room Id is required!</small> 
-                </span>
-            </div>
-            <div class="form-group mb-3 form-row middle">
-                <label>Arrival Date :</label>
-                <input type="date" class="form-control" [(ngModel)]="reservation.ArrivalDate" formControlName="ArrivalDate" >
-                <span class="error" *ngIf="validation.ArrivalDate.invalid && validation.ArrivalDate.touched" >
-                <small>Arrival Date is required!</small>
-                </span>
-            </div>
-            <div class="form-group mb-3 form-row">
-                <label>Departure Date :</label>
-                <input type="date" class="form-control" [(ngModel)]="reservation.DepartureDate" formControlName="DepartureDate">
-                <span class="error" *ngIf="validation.DepartureDate.invalid && validation.DepartureDate.touched" >
-                <small>Departure Date is required!</small> 
-                </span>
-            </div>
-            <div class="form-group mb-3 form-row middle" >
-                <label>Notes :</label>
-                <input type="text" class="form-control" [(ngModel)]="reservation.Notes" formControlName="Notes">
-                
-            </div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Reservation No</th>
+                    <th scope="col">Guest Name</th>
+                    <th scope="col">Guest Email</th>
+                    <th scope="col">Room No</th>
+                    <th scope="col">Arrival Date</th>
+                    <th scope="col">Departure Date</th>
+                    <th scope="col">Notes</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
             
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button  id="Cancel" type="button" class="btn btn-outline-dark" (click)="cancel()"  (click)="modal.close('Save click')">Cancel</button>
-            <button id="btn" type="button" [disabled]="Reservationform.invalid" class="btn btn-outline-dark" (click)="UpdateGuest(reservation.id)" (click)="modal.close('Save click')">Update</button> 
-        </div>
-        </ng-template>
-  
-        <mat-icon  (click)="open(content2)" class="deleteIcon">delete</mat-icon>
-        
-        <!--Delete msg Modal -->
-        <ng-template #content2 let-modal>
-        <div class="modal-header">
-            <h2 class="modal-title" id="staticBackdropLabel" style="color: #B21313;"><b>Confirmation</b></h2>
-            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            Are you sure to delete this Reservation ?
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="deleteRow(reservation.id)" (click)="modal.close('Delete click')">Delete</button>
-        </div>
-        </ng-template>
-        </span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-    <br>
-    <pagination-controls (pageChange) = "page = $event" class="paginator"></pagination-controls>
-    
-  </div>
+            <tbody>
+                <tr *ngFor = "let reservation of reservations | filter:searchText | paginate: {itemsPerPage : 5, currentPage:page};" >
+                    <td data-label="Reservation No" > <span>{{ reservation.ReservationNo }}</span></td>
+                    <td data-label="Guest Name" > <span>{{ reservation.GuestName }}</span></td>
+                    <td data-label="Guest Name" > <span>{{ reservation.GuestEmail }}</span></td>
+                    <td data-label="Room Id" ><span>{{ reservation.RoomNo }}</span></td>
+                    <td data-label="Arrival Date" ><span>{{ reservation.ArrivalDate | date: 'dd/MMM/yy'}}</span></td>
+                    <td data-label="Departure Date" ><span>{{ reservation.DepartureDate | date: 'dd/MMM/yy' }}</span></td>
+                    <td data-label="Notes" ><span>{{ reservation.Notes }}</span></td>
+                    <td data-label="Notes" ><span>{{ reservation.Status }}</span></td>
+                    <td data-label="Action" ><span>
+                        <mat-icon matTooltip="Check In" (click)="checkIn(reservation.id)" [ngClass]="reservation.Status == 'Confirmed' ? 'availableIcon' : 'disable'"  >input</mat-icon>
+                        <mat-icon matTooltip="Check Out" (click)="open(checkOutModal)"  [ngClass]="reservation.Status == 'Checked In' ? 'availableIcon' : 'disable'">check_circle_outline</mat-icon>
+
+                        <!--Check Out Modal -->
+                        <ng-template #checkOutModal let-modal>  
+                            <div class="modal-body">
+                                <br>
+                                <h1 class="modal-title" id="staticBackdropLabel"><b>Check Out</b></h1><br>
+                                <form [formGroup]="Reservationform">
+                                    <div class="form-group mb-3 ">
+                                        <label>Reservation No :</label>
+                                        <input type="text" [readonly]="disableMessage" [(ngModel)]="reservation.ReservationNo" class="form-control" formControlName="ReservationNo">     
+                                    </div>
+                                    <div class="form-group mb-3 form-row">
+                                        <label>Arrival Date :</label>
+                                        <input type="date" class="form-control" [(ngModel)]="reservation.ArrivalDate" formControlName="ArrivalDate" >
+                                    </div>
+                                    <div class="form-group mb-3 form-row middle">
+                                        <label>Departure Date :</label>
+                                        <input type="date" class="form-control" [(ngModel)]="reservation.DepartureDate" formControlName="DepartureDate">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label>Total Charge :</label>
+                                        <input type="text" class="form-control">     
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label>Discount :</label>
+                                        <input type="text" class="form-control">     
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label>Payment No :</label>
+                                        <input type="text" class="form-control" >     
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="Cancel" type="button" class="btn btn-outline-dark" (click)="cancel()"  (click)="modal.close('Save click')">Cancel</button>
+                                <button id="btn" type="button" class="btn btn-outline-dark" (click)="cancel()" (click)="checkOut(reservation.id)" (click)="modal.close('Save click')">Save</button> 
+                            </div>
+                        </ng-template>
+
+                        <mat-icon (click)="open(editReservation)" class="editIcon">edit</mat-icon>
+                
+                        <!--Edit Modal -->
+                        <ng-template #editReservation let-modal>  
+                            <div class="modal-body">
+                                <br>
+                                <h1 class="modal-title" id="staticBackdropLabel"><b>Reservation Details</b></h1><br>
+                                <form [formGroup]="Reservationform">
+                                    <div class="form-group mb-3 form-row">
+                                        <label>Reservation No :</label>
+                                        <input type="text" [readonly]="disableMessage" [(ngModel)]="reservation.ReservationNo" class="form-control" formControlName="ReservationNo">     
+                                    </div>
+                                    <div class="form-group mb-3 form-row middle">
+                                        <label>Status :</label>
+                                        <input type="text" [readonly]="disableMessage" [(ngModel)]="reservation.Status" class="form-control" formControlName="Status">     
+                                    </div>
+                                    <div class="form-group form-row mb-3">
+                                        <label>Guest Name :</label>
+                                        <input type="text" required  [(ngModel)]="reservation.GuestId" class="form-control" formControlName="GuestId">
+                                        <span class="error" *ngIf="validation.GuestId.invalid && validation.GuestId.touched" >
+                                            <small>  Guest Id is required!</small>
+                                        </span>
+                                    </div>
+                                    <div class="form-group mb-3 form-row middle">
+                                        <label>Room Id :</label>
+                                        <input type="text" [(ngModel)]="reservation.RoomId" class="form-control" formControlName="RoomId">
+                                        <span class="error" *ngIf="validation.RoomId.invalid && validation.RoomId.touched" >
+                                            <small>Room Id is required!</small> 
+                                        </span>
+                                    </div>
+                                    <div class="form-group mb-3 form-row">
+                                        <label>Arrival Date :</label>
+                                        <input type="date" class="form-control" [(ngModel)]="reservation.ArrivalDate" formControlName="ArrivalDate" >
+                                        <span class="error" *ngIf="validation.ArrivalDate.invalid && validation.ArrivalDate.touched" >
+                                            <small>Arrival Date is required!</small>
+                                        </span>
+                                    </div>
+                                    <div class="form-group mb-3 form-row middle">
+                                        <label>Departure Date :</label>
+                                        <input type="date" class="form-control" [(ngModel)]="reservation.DepartureDate" formControlName="DepartureDate">
+                                        <span class="error" *ngIf="validation.DepartureDate.invalid && validation.DepartureDate.touched" >
+                                            <small>Departure Date is required!</small> 
+                                        </span>
+                                    </div>
+                                    <div class="form-group mb-3 " >
+                                        <label>Notes :</label>
+                                        <input type="text" class="form-control" [(ngModel)]="reservation.Notes" formControlName="Notes">    
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="Cancel" type="button" class="btn btn-outline-dark" (click)="cancel()"  (click)="modal.close('Save click')">Cancel</button>
+                                <button id="btn" type="button" [disabled]="Reservationform.invalid" class="btn btn-outline-dark" (click)="UpdateGuest(reservation.id)" (click)="modal.close('Save click')">Update</button> 
+                            </div>
+                        </ng-template>
+                
+                        <mat-icon  (click)="open(deleteReservation)" class="deleteIcon">delete</mat-icon>
+                        
+                        <!--Delete msg Modal -->
+                        <ng-template #deleteReservation let-modal>
+                        <div class="modal-header">
+                            <h2 class="modal-title" id="staticBackdropLabel" style="color: #B21313;"><b>Confirmation</b></h2>
+                            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure to delete this Reservation ?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-dark" (click)="deleteRow(reservation.id)" (click)="modal.close('Delete click')">Delete</button>
+                        </div>
+                        </ng-template>
+                    </span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <pagination-controls (pageChange) = "page = $event" class="paginator"></pagination-controls>
+    </div>
 </div>
