--- a/src/styles.css
+++ b/src/styles.css
@@ -1,73 +1,71 @@
-.firstNavBar{
+.firstNavBar {
   background-color: #041A32;
 }
-.firstNavBar .container-fluid , #navbarNav{
+.firstNavBar .container-fluid , #navbarNav {
   background-color: #041A32;
 }
-.firstNavBar img{
+.firstNavBar img {
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
   margin-left: 60px;
 }
-.firstNavBar .navbar-toggler{
+.firstNavBar .navbar-toggler {
   box-shadow: none;
 }
-#navbarNav .deactive{
+#navbarNav .deactive {
   color: #fff;
 }
-#navbarNav .active{
+#navbarNav .active {
   color: #FF6400;
 }
-.secondNavBar{
+.secondNavBar {
   background-color: #F8F8F8;
   height: 60px; 
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.secondNavBar .container-fluid{
+.secondNavBar .container-fluid {
   background-color: #F8F8F8; 
   height: 60px;
 }
-.secondNavBar .bar{
+.secondNavBar .bar {
   width: 50%;
 }
-.secondNavBar .bar h2{
+.secondNavBar .bar h2 {
   padding-left: 3rem !important;
 }
-.search{
+.search {
   width: 250px;
 }
-.search .searchBox{
+.search .searchBox {
   border: none;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.search #searchIcon{
+.search #searchIcon {
   background-color: #041A32; 
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2); 
   color: #fff;
 }
-.img{
-    width: 25px;
-    height: 25px;
-    position: absolute; 
-    top: 20%;
+.img {
+  width: 25px;
+  height: 25px;
+  position: absolute; 
+  top: 20%;
 }
-
 html, body {
-    height: 100%; 
+  height: 100%; 
 }
-
 body {
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
 /* search box responsive*/
-@media(max-width: 540px){
-  .pagename{
+@media(max-width: 540px) {
+  .pagename {
     display: none;
   }
-  .input-group{
+  .input-group {
     position: relative;
     margin-left: auto;
     vertical-align: middle;
@@ -75,7 +73,7 @@ body {
 }
 
 /* table responsive*/  
-@media(max-width: 750px){
+@media(max-width: 788px) {
   .table thead{
     display: none;
   }
@@ -103,31 +101,29 @@ body {
     text-align: left;
   }
 }
-table th{
+table th {
   color: #6C6969;
 }
-table td{
+table td {
   color: #6C6969;
 }
-.modal{
+.modal {
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 0;
 }
-  
-.error{
+.error {
   color: red;
 }
-.modal-header button{
+.modal-header button {
   margin-right: 0;
   margin-left:auto;
 }
-#btn{
+#btn {
   color: #fff;
   background-color: #FF6400;
   box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.2);
 }
-
-#Cancel{
+#Cancel {
   color: #000;
   background-color: #F2F0F0;
   box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.2);
@@ -139,10 +135,18 @@ table td{
 #btn:hover {
   background-color: #07325f;
 }
-.modal-footer button{
+.modal-footer button {
   width: 85px;
   height: 40px;
 }
 icon , mat-icon {
   cursor: pointer;
+}
+
+form label {
+  color: #6C6969;
+  font-weight: 500;
+}
+.modal-title {
+  text-align: center;
 }
